Deckel-Shop/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */

/* Custom css */

.btn-primary {
    color: #e9cf97 !important;
    background-color: #4e4e4e !important;
    text-decoration: underline;
}

/*ul.catBlock {
    display: table;
}

    ul.catBlock li {
        list-style: none;
        display: table-cell;
        text-align: center;
        vertical-align: middle;
    }

        ul.catBlock li a {
            display: block;
        }*/


/***New css**/

* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color: #4e4e4e;
    font-family: 'Open Sans', sans-serif;
    margin-bottom: 30px;
    box-shadow: -22px 22px 20px #aaaaaa, 22px -22px 20px #ffffff;
    position: relative;
    z-index: 3;
    /*margin: 0 auto;
    width: 60%;*/
}

.logo img {
    background-image: none;
    width: 120px;
    height: 120px;
}

.logo img {
    justify-content: left;
}

.nav-links {
    display: flex;
    justify-content: space-around;
    width: 30%;
    list-style: none;
}

    .nav-links li {
        list-style: none;
    }

    .nav-links a {
        color: #c4a970;
        text-decoration: none;
        letter-spacing: 3px;
        font-weight: bold;
        font-size: 16px;
    }

    .nav-item{
        list-style:none;
    }

nav a:before {
    content: "";
    border-bottom: 2px solid rgb(255, 255, 255);
    position: absolute;
    bottom: 0px;
    left: 0px;
    right: 110%;
    transition: .3s right;
}

nav a:hover:before {
    right: 0%;
}

.text-dark {
    text-align: justify !important;
    color: #c4a970 !important;
}

nav .nav-link {
    display: block !important;
    padding: 1px !important;
}


.burger {
    display: none;
    cursor: pointer;
}

    .burger div {
        width: 25px;
        height: 2px;
        background-color: #a78e5a;
        margin: 5px;
        transition: all 0.3s ease;
    }

    /**About***/
.Aboutpage {
    margin-bottom: 50px;
}


    /**FAQ**/
    .collapsible {
        background-color: #6c757d;
        color: white;
        cursor: pointer;
        padding: 18px;
        width: 100%;
        border: none;
        text-align: left;
        outline: none;
        font-size: 15px;
    }

    .active, .collapsible:hover {
        background-color: #555;
    }

.content {
    padding: 0 18px;
    overflow: hidden;
}

.footer {
    position: relative;
    bottom: 0;
    width: 100%;
    white-space: nowrap;
    line-height: 60px; /* Vertically center the text there */
}


@media screen and (max-width: 1024px) {
    .nav-links {
        width: 30%
    }
}

@media screen and (max-width: 768px) {
    body {
        overflow-x: hidden;
    }

    .nav-links {
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 10vh;
        background-color: #4e4e4e;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform 0.2s ease-in;
        opacity: 95%;

        z-index:auto;
    }

    .text-dark {
        opacity: 0;
    }

    .nav-links li {
        opacity: 0;
    }


    .footer {
        width: 50%
    }

    .burger {
        display: block;
    }
}

.nav-active {
    transform: translateX(0%)
}

@keyframes navLinkFade {
    from {
        opacity: 0;
        transform: translateX(50px);
    }

    to {
        opacity: 1;
        transform: translateX(0px);
    }
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-5px,6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px,-6px);
}

/****Index Carousel***/

.headline-3 {
    margin-top: 100px
}


.carousel-item {
    height: 32rem;
    background: rgb(0, 0, 0);
    color: white;
    position: relative;
    z-index: 1;
}

.container-p {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 50px;
    z-index: 1;
}

    .container-p .btn {
        color: #000000;
        background-color: white;
    }

.overlay-image {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    top: 0;
    background-position: center;
    background-size: cover;
    opacity: 0.8;
}

.carousel-indicators {
    z-index: 2;
}

/********************* Shopping Demo-4 **********************/
.product-grid4, .product-grid4 .product-image4 {
    position: relative
}

.product-grid4 {
    font-family: Poppins,sans-serif;
    text-align: center;
    border-radius: 5px;
    overflow: hidden;
    z-index: 1;
    transition: all .3s ease 0s
}

    .product-grid4:hover {
        box-shadow: 0 0 10px rgba(0,0,0,.2)
    }

    .product-grid4 .product-image4 a {
        display: block
    }

    .product-grid4 .product-image4 img {
        width: 100%;
        height: auto
    }

    .product-grid4 .pic-1 {
        opacity: 1;
        transition: all .5s ease-out 0s
    }

    .product-grid4:hover .pic-1 {
        opacity: 0
    }

    .product-grid4 .pic-2 {
        position: absolute;
        top: 0;
        left: 0;
        opacity: 0;
        transition: all .5s ease-out 0s
    }

    .product-grid4:hover .pic-2 {
        opacity: 1
    }

    .product-grid4 .social {
        width: 180px;
        padding: 0;
        margin: 0 auto;
        list-style: none;
        position: absolute;
        right: 0;
        left: 0;
        top: 50%;
        transform: translateY(-50%);
        transition: all .3s ease 0s
    }

        .product-grid4 .social li {
            display: inline-block;
            opacity: 0;
            transition: all .7s
        }

            .product-grid4 .social li:nth-child(1) {
                transition-delay: .15s
            }

            .product-grid4 .social li:nth-child(2) {
                transition-delay: .3s
            }

            .product-grid4 .social li:nth-child(3) {
                transition-delay: .45s
            }

    .product-grid4:hover .social li {
        opacity: 1
    }

    .product-grid4 .social li a {
        color: #f2f2f2;
        background: #ad8649;
        font-size: 17px;
        line-height: 36px;
        width: 40px;
        height: 36px;
        border-radius: 2px;
        margin: 0 5px;
        display: block;
        transition: all .3s ease 0s
    }

        .product-grid4 .social li a:hover {
            color: #fff;
            background: #7d8185
        }

        .product-grid4 .social li a:after, .product-grid4 .social li a:before {
            content: attr(data-tip);
            color: #fff;
            background-color: #000;
            font-size: 12px;
            line-height: 20px;
            border-radius: 3px;
            padding: 0 5px;
            white-space: nowrap;
            opacity: 0;
            transform: translateX(-50%);
            position: absolute;
            left: 50%;
            top: -30px
        }

        .product-grid4 .social li a:after {
            content: '';
            height: 15px;
            width: 15px;
            border-radius: 0;
            transform: translateX(-50%) rotate(45deg);
            top: -22px;
            z-index: -1
        }

        .product-grid4 .social li a:hover:after, .product-grid4 .social li a:hover:before {
            opacity: 1
        }

    .product-grid4 .product-discount-label, .product-grid4 .product-new-label {
        color: #fff;
        background-color: #ad8649;
        font-size: 13px;
        font-weight: 800;
        text-transform: uppercase;
        line-height: 45px;
        height: 45px;
        width: 45px;
        border-radius: 50%;
        position: absolute;
        left: 10px;
        top: 15px;
        transition: all .3s
    }

    .product-grid4 .product-discount-label {
        left: auto;
        right: 10px;
        background-color: #7d8185
    }

    .product-grid4:hover .product-new-label {
        opacity: 0
    }

    .product-grid4 .product-content {
        padding: 25px
    }

    .product-grid4 .title {
        font-size: 15px;
        font-weight: 400;
        text-transform: capitalize;
        margin: 0 0 7px;
        transition: all .3s ease 0s
    }

        .product-grid4 .title a {
            color: #222
        }

            .product-grid4 .title a:hover {
                color: #1b6ec2
            }

    .product-grid4 .price {
        color: #4e4e4e;
        font-size: 17px;
        font-weight: 700;
        margin: 0 2px 15px 0;
        display: block
    }

        .product-grid4 .price span {
            color: #909090;
            font-size: 13px;
            font-weight: 400;
            letter-spacing: 0;
            text-decoration: line-through;
            text-align: left;
            vertical-align: middle;
            display: inline-block
        }

    .product-grid4 .add-to-cart {
        border: 1px solid #e5e5e5;
        display: inline-block;
        padding: 10px 20px;
        color: #888;
        font-weight: 600;
        font-size: 14px;
        border-radius: 4px;
        transition: all .3s
    }

    .product-grid4:hover .add-to-cart {
        border: 1px solid transparent;
        background: #ad8649;
        color: #fff
    }

    .product-grid4 .add-to-cart:hover {
        background-color: #4e4e4e;
        box-shadow: 0 0 10px rgba(0,0,0,.5)
    }

@media only screen and (max-width:990px) {
    .product-grid4 {
        margin-bottom: 30px
    }
}
.form-text {
    display: block;
    margin-top: 0.25rem;
    margin-left: 0;
    width: 50%;
}

.form-row {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: 0;
    width: 70%
}

.needs-validation {
    margin-left: auto;
}

